Initial SignalR Review.

--- a/expnense-tracker-ui/ExpnenseTrackerApp/ExpnenseTrackerApp/ExpnenseTrackerApp.csproj
+++ b/expnense-tracker-ui/ExpnenseTrackerApp/ExpnenseTrackerApp/ExpnenseTrackerApp.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Azure.SignalR" Version="1.21.4" />
   </ItemGroup>
 
 </Project>
