--- a/expnense-tracker-ui/ExpnenseTrackerApp/ExpnenseTrackerApp/appsettings.json
+++ b/expnense-tracker-ui/ExpnenseTrackerApp/ExpnenseTrackerApp/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "AzureServiceBus": {
     "ConnectionString": "Endpoint=sb://daily-expenses.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=9hEsHjVVHDtJ+wH/XuOhvm/khLdM9Eo0v+ASbH6qAqc="
+  },
+  "SignalR": {
+    "ConnectionString": "Endpoint=sb://daily-expenses.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=9hEsHjVVHDtJ+wH/XuOhvm/khLdM9Eo0v+ASbH6qAqc="
   }
 }
